# EasyCL

./: README.md  README_zh.md  eval_config.json  pyproject.toml  requirements.txt  train_config.json
benchmark/ABSACL/: benchmark_info.json
benchmark/ABSACL_ATSC/: benchmark_info.json  dataset_info.json  dataset_options.json
benchmark/LFPT5/: benchmark_info.json  dataset_info.json  dataset_options.json
benchmark/LNT/: benchmark_info.json  dataset_info.json
benchmark/VQA_CL/: README.md  benchmark_info.json  dataset_info.json
benchmark/large_number_of_tasks_benchmark/: benchmark_info.json  dataset_info.json  dataset_options.json
cl_workflow/: README.md  README_zh.md  cl_train_and_eval.py  evaluator.py
cl_workflow/cl_eval/: adapters.py  cl_metrics.py
data/: BoolQA.json  BoolQA_dev.json  CB.json  CB_test.json  IMDB.json  MNLI.json  MNLI_test.json  QQP.json  QQP_test.json  RTE.json  RTE_test.json  SST-2.json  SST-2_test.json  WiC.json  WiC_dev.json  agnews.json  agnews_test.json  amazon_test.json  dataset_info.json  dataset_options.json
data/prepare_benchmark_data/: nano convert_to_alpaca.py
example/: ewc_example.yaml  gem_example.yaml  ilora_example.yaml  lwf_example.yaml  moelora_example.yaml  replay_example.yaml  ssr_example.yaml
example/eval_examples/: lora_eval.yaml  moelora_eval.yaml  multi_adapter_eval.yaml
example/train_examples/: abscl_example.yaml  cl_moe_example.yaml  dynamic_conpet_example.yaml  ewc_example.yaml  gem_example.yaml  ilora_example.yaml  (+8 more)
hparams/: cl_finetuning_args.py  evaluation_args.py
test/: test_import.py  test_imports.py
(+239 files in other folders)
