[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "easycl"
version = "0.1.0"
description = "Continual Learning Extension for LLaMA-Factory"
readme = "README.md" # Optional, create if needed
license = { text = "Apache-2.0" } # Match LLaMA-Factory license
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"
# Add llamafactory dependency
dependencies = [
    "llamafactory>=0.9.2", # Add specific version if needed, e.g., "llamafactory>=0.7.0"
    "transformers!=4.51.1"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["easycl*"]

# Add the command-line script entry point
[project.scripts]
easycl-cli = "easycl.cli.cli:main" 